fix: redéfini le padding des posts-card pour qu'elles s'alignent avec les évenements

--- a/frontend-implicaction/src/app/home/components/post-card/post-card.component.scss
+++ b/frontend-implicaction/src/app/home/components/post-card/post-card.component.scss
@@ -11,6 +11,13 @@
   background-color: white;
 }
 
+.avatar {
+  width: 48px;
+}
+
+.card-body {
+  padding: 12px;
+}
 
 .post-card-link {
   text-decoration: none;
